--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
             </div>
           </div>
         </form>
+
         <div class="list-group" id="history"></div>
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="mt-3" role="region" aria-live="polite">
+          <p>Today</p>
+        </section>
+
         <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
