--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         <div class="list-group" id="history"></div>
       </aside>
 
+      <!-- Area to display Todays weather details -->
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-          <p>Today</p>
         </section>
-
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <hr class="hr" />
+        <!-- Area to display 5 days forecast details -->
+        <section id="weatherForecast" class="row mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
