changes to hourly forecast to only display 1

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <div class="input-group">
               <input class="form-input weather-search" type="text" id="search-input" placeholder="e.g London"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
+              <button class="clear-button" id="clear-search-input" aria-label="clear search">x</button>
+
             </div>
             <div class="input-group-append">
-              <button type="submit" class="button-52" id="search-button" aria-label="submit search">
+              <button type="submit" class="btn btn-primary" id="search-button" aria-label="submit search">
                 Search
               </button>
               <hr class="hr weather-hr" />
