updated history list and local storage

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div class="form-inline form-group">
             <div class="input-group">
               <input class="form-input weather-search" type="text" id="search-input" placeholder="e.g London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <button class="clear-button" id="clear-search-input" aria-label="clear search">x</button>
+                aria-labelledby="form-heading" aria-controls="today forecast" required />
+              <!-- <button class="clear-button" id="clear-search-input" aria-label="clear search">x</button> -->
 
             </div>
             <div class="input-group-append">
